--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,11 @@
 body{
     background-color: gray;
     color: black;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial;
+}
+
+h2{
+    text-align: center;
 }
 
 table, tr, td, th{
@@ -13,6 +17,13 @@ table, tr, td, th{
 }
 
 div.div1{
+    text-align: center;
+}
+
+div#omg{
+    background-color: rgb(128, 128, 128);
+    font-size: smaller;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
 
