--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ div#omg{
     font-size: smaller;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    font-style: italic;
 }
 
 table{
