--- a/assets/css/mp.css
+++ b/assets/css/mp.css
@@ -33,3 +33,20 @@ h2{
     background-color: aliceblue;
 
 }
+footer{
+    position: fixed;
+    bottom: 0;
+    left: 0%;
+    bottom: 0%;
+    width: 100%;
+    line-height: 30px;
+    text-align: center;
+    padding: 0;
+}
+li{
+    display: inline;
+    padding: 0.30em;
+}
+span{
+    color: black;
+}
